[package]
name = "method_name"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { path = "../../../../risc0/zkvm", default-features = false, features = ["std"] }
wasmi = { git = "https://github.com/alt-research/accel-wasmi", branch = "master", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
